--- a/render.yaml
+++ b/render.yaml
@@ -1,24 +1,18 @@
 databases:
   - name: budget_app
-    plan: free
-    ipAllowList: []
+    databaseName: budget_app
+    user: budget_app
 
 services:
   - type: web
-    name: rails
-    plan: free
-    env: ruby
+    name: budget_app
+    runtime: ruby
     buildCommand: "./bin/render-build.sh"
-    startCommand: bundle exec rails s
+    startCommand: "bundle exec rails s"
     envVars:
-      - key: RAILS_MASTER_KEY
-        sync: false
       - key: DATABASE_URL
         fromDatabase:
           name: budget_app
           property: connectionString
-  - type: redis
-    name: redis
-    ipAllowList: []
-    plan: free
-    maxmemoryPolicy: noeviction
+      - key: RAILS_MASTER_KEY
+        sync: false
