--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,24 @@
 databases:
   - name: budget_app
-    databaseName: budget_app
-    user: budget_app
+    plan: free
+    ipAllowList: []
 
 services:
   - type: web
-    name: budget_app
-    runtime: ruby
+    name: rails
+    plan: free
+    env: ruby
     buildCommand: "./bin/render-build.sh"
-    startCommand: "bundle exec rails s"
+    startCommand: bundle exec rails s
     envVars:
+      - key: RAILS_MASTER_KEY
+        sync: false
       - key: DATABASE_URL
         fromDatabase:
           name: budget_app
           property: connectionString
-      - key: RAILS_MASTER_KEY
-        sync: false
+  - type: redis
+    name: redis
+    ipAllowList: []
+    plan: free
+    maxmemoryPolicy: noeviction
